// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic on-import: js code 1`] = `
"'use strict';

function styleInject(css, ref) {
  if ( ref === void 0 ) ref = {};
  var insertAt = ref.insertAt;

  if (!css || typeof document === 'undefined') { return; }

  var head = document.head || document.getElementsByTagName('head')[0];
  var style = document.createElement('style');
  style.type = 'text/css';

  if (insertAt === 'top') {
    if (head.firstChild) {
      head.insertBefore(style, head.firstChild);
    } else {
      head.appendChild(style);
    }
  } else {
    head.appendChild(style);
  }

  if (style.styleSheet) {
    style.styleSheet.cssText = css;
  } else {
    style.appendChild(document.createTextNode(css));
  }
}

var css_248z = \\"body {\\\\n  color: red;\\\\n}\\\\n\\";
styleInject(css_248z);

var css_248z$1 = \\".bar {\\\\n  color: red;\\\\n}\\\\n\\";
styleInject(css_248z$1);

var css_248z$2 = \\"body {\\\\n  color: #f00;\\\\n  background: #f00;\\\\n}\\\\n\\";
styleInject(css_248z$2);

var css_248z$3 = \\"#sidebar {\\\\n  width: 30%;\\\\n  background-color: #faa; }\\\\n\\";
styleInject(css_248z$3);

var css_248z$4 = \\"#header {\\\\n  color: #6c94be;\\\\n}\\\\n\\";
styleInject(css_248z$4);

var css_248z$5 = \\".pcss {\\\\n  color: red;\\\\n}\\\\n\\";
styleInject(css_248z$5);

console.log(css_248z, css_248z$1);
"
`;

exports[`basic postcss-config: js code 1`] = `
"'use strict';

function styleInject(css, ref) {
  if ( ref === void 0 ) ref = {};
  var insertAt = ref.insertAt;

  if (!css || typeof document === 'undefined') { return; }

  var head = document.head || document.getElementsByTagName('head')[0];
  var style = document.createElement('style');
  style.type = 'text/css';

  if (insertAt === 'top') {
    if (head.firstChild) {
      head.insertBefore(style, head.firstChild);
    } else {
      head.appendChild(style);
    }
  } else {
    head.appendChild(style);
  }

  if (style.styleSheet) {
    style.styleSheet.cssText = css;
  } else {
    style.appendChild(document.createTextNode(css));
  }
}

var css_248z = \\"a {\\\\n  color: blue\\\\n}\\\\n\\\\n.multiline,\\\\n.selector {\\\\n  box-shadow: 1px 0 9px rgba(0, 0, 0, .4),\\\\n              1px 0 3px rgba(0, 0, 0, .6)\\\\n}\\\\n\\";
styleInject(css_248z);
"
`;

exports[`basic postcss-options: js code 1`] = `
"'use strict';

function styleInject(css, ref) {
  if ( ref === void 0 ) ref = {};
  var insertAt = ref.insertAt;

  if (!css || typeof document === 'undefined') { return; }

  var head = document.head || document.getElementsByTagName('head')[0];
  var style = document.createElement('style');
  style.type = 'text/css';

  if (insertAt === 'top') {
    if (head.firstChild) {
      head.insertBefore(style, head.firstChild);
    } else {
      head.appendChild(style);
    }
  } else {
    head.appendChild(style);
  }

  if (style.styleSheet) {
    style.styleSheet.cssText = css;
  } else {
    style.appendChild(document.createTextNode(css));
  }
}

var css_248z = \\"body {\\\\n  display: flex;\\\\n}\\\\n\\";
styleInject(css_248z);
"
`;

exports[`basic simple: js code 1`] = `
"'use strict';

function styleInject(css, ref) {
  if ( ref === void 0 ) ref = {};
  var insertAt = ref.insertAt;

  if (!css || typeof document === 'undefined') { return; }

  var head = document.head || document.getElementsByTagName('head')[0];
  var style = document.createElement('style');
  style.type = 'text/css';

  if (insertAt === 'top') {
    if (head.firstChild) {
      head.insertBefore(style, head.firstChild);
    } else {
      head.appendChild(style);
    }
  } else {
    head.appendChild(style);
  }

  if (style.styleSheet) {
    style.styleSheet.cssText = css;
  } else {
    style.appendChild(document.createTextNode(css));
  }
}

var css_248z = \\"body {\\\\n  color: red;\\\\n}\\\\n\\";
styleInject(css_248z);

var css_248z$1 = \\".bar {\\\\n  color: red;\\\\n}\\\\n\\";
styleInject(css_248z$1);

var css_248z$2 = \\"body {\\\\n  color: #f00;\\\\n  background: #f00;\\\\n}\\\\n\\";
styleInject(css_248z$2);

var css_248z$3 = \\"#sidebar {\\\\n  width: 30%;\\\\n  background-color: #faa; }\\\\n\\";
styleInject(css_248z$3);

var css_248z$4 = \\"#header {\\\\n  color: #6c94be;\\\\n}\\\\n\\";
styleInject(css_248z$4);

var css_248z$5 = \\".pcss {\\\\n  color: red;\\\\n}\\\\n\\";
styleInject(css_248z$5);

console.log(css_248z, css_248z$1);
"
`;

exports[`basic skip-loader: js code 1`] = `
"'use strict';

function styleInject(css, ref) {
  if ( ref === void 0 ) ref = {};
  var insertAt = ref.insertAt;

  if (!css || typeof document === 'undefined') { return; }

  var head = document.head || document.getElementsByTagName('head')[0];
  var style = document.createElement('style');
  style.type = 'text/css';

  if (insertAt === 'top') {
    if (head.firstChild) {
      head.insertBefore(style, head.firstChild);
    } else {
      head.appendChild(style);
    }
  } else {
    head.appendChild(style);
  }

  if (style.styleSheet) {
    style.styleSheet.cssText = css;
  } else {
    style.appendChild(document.createTextNode(css));
  }
}

var css_248z = \\"body {\\\\n  color: red;\\\\n}\\\\n\\";
styleInject(css_248z);
"
`;

exports[`extract custom-path: css code 1`] = `
"body {
  color: red;
}

.bar {
  color: red;
}

body {
  color: #f00;
  background: #f00;
}

#sidebar {
  width: 30%;
  background-color: #faa; }

#header {
  color: #6c94be;
}

.pcss {
  color: red;
}

/*# sourceMappingURL=extracted.css.map */"
`;

exports[`extract custom-path: css map 1`] = `"{\\"version\\":3,\\"sources\\":[\\"foo.css\\",\\"bar.css\\",\\"test/fixtures/simple/style.styl\\",\\"style.styl\\",\\"test/fixtures/simple/style.sass\\",\\"test/fixtures/simple/style.less\\",\\"style.less\\",\\"style.pcss\\"],\\"names\\":[],\\"mappings\\":\\"AAAA;EACE,UAAU;AACZ;;ACFA;EACE,UAAU;AACZ;;ACFA;EACE,WAAO;EACP,gBAAY;ACCd;;ACHA;EACE,UAAU;EACV,sBAAsB,EAAA;;ACCxB;EACE,cAAA;ACFF;;ACFA;EACE,UAAU;AACZ\\",\\"file\\":\\"this/is/extracted.css\\",\\"sourcesContent\\":[\\"body {\\\\n  color: red;\\\\n}\\\\n\\",\\".bar {\\\\n  color: red;\\\\n}\\\\n\\",\\"body\\\\n  color: red\\\\n  background: @color\\\\n\\",\\"body {\\\\n  color: #f00;\\\\n  background: #f00;\\\\n}\\\\n\\",\\"#sidebar {\\\\n  width: 30%;\\\\n  background-color: #faa; }\\\\n\\",\\"@nice-blue: #5B83AD;\\\\n@light-blue: @nice-blue + #111;\\\\n\\\\n#header {\\\\n  color: @light-blue;\\\\n}\\\\n\\",\\"#header {\\\\n  color: #6c94be;\\\\n}\\\\n\\",\\".pcss {\\\\n  color: red;\\\\n}\\\\n\\"]}"`;

exports[`extract custom-path: js code 1`] = `
"'use strict';

var foo = undefined;

var bar = undefined;

console.log(foo, bar);
"
`;

exports[`extract nested: css code 1`] = `
"body {
  color: red;
}

.bar-module_bar {
  color: red;
}

a {
  font-weight: bold;
}

.component-module_box {
  color: blue;
}
/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbImZvby5jc3MiLCJiYXIubW9kdWxlLmNzcyIsIm5lc3RlZC5jc3MiLCJjb21wb25lbnQubW9kdWxlLmNzcyJdLCJuYW1lcyI6W10sIm1hcHBpbmdzIjoiQUFBQTtFQUNFLFVBQVU7QUFDWjs7QUNGQTtFQUNFLFVBQVU7QUFDWjs7QUNGQTtFQUNFLGlCQUFpQjtBQUNuQjs7QUNGQTtFQUNFLFdBQVc7QUFDYiIsImZpbGUiOiJidW5kbGUuY3NzIiwic291cmNlc0NvbnRlbnQiOlsiYm9keSB7XG4gIGNvbG9yOiByZWQ7XG59XG4iLCIuYmFyIHtcbiAgY29sb3I6IHJlZDtcbn1cbiIsImEge1xuICBmb250LXdlaWdodDogYm9sZDtcbn1cbiIsIi5ib3gge1xuICBjb2xvcjogYmx1ZTtcbn0iXX0=*/"
`;

exports[`extract nested: js code 1`] = `
"'use strict';

var bar = {\\"bar\\":\\"bar-module_bar\\"};

var component = {\\"box\\":\\"component-module_box\\"};

console.log(bar, component);
"
`;

exports[`extract nested-delay-resolve: css code 1`] = `
"body {
  color: red;
}

.bar-module_bar {
  color: red;
}

a {
  font-weight: bold;
}

.component-module_box {
  color: blue;
}
/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbImZvby5jc3MiLCJiYXIubW9kdWxlLmNzcyIsIm5lc3RlZC5jc3MiLCJjb21wb25lbnQubW9kdWxlLmNzcyJdLCJuYW1lcyI6W10sIm1hcHBpbmdzIjoiQUFBQTtFQUNFLFVBQVU7QUFDWjs7QUNGQTtFQUNFLFVBQVU7QUFDWjs7QUNGQTtFQUNFLGlCQUFpQjtBQUNuQjs7QUNGQTtFQUNFLFdBQVc7QUFDYiIsImZpbGUiOiJidW5kbGUuY3NzIiwic291cmNlc0NvbnRlbnQiOlsiYm9keSB7XG4gIGNvbG9yOiByZWQ7XG59XG4iLCIuYmFyIHtcbiAgY29sb3I6IHJlZDtcbn1cbiIsImEge1xuICBmb250LXdlaWdodDogYm9sZDtcbn1cbiIsIi5ib3gge1xuICBjb2xvcjogYmx1ZTtcbn0iXX0=*/"
`;

exports[`extract nested-delay-resolve: js code 1`] = `
"'use strict';

var bar = {\\"bar\\":\\"bar-module_bar\\"};

var component = {\\"box\\":\\"component-module_box\\"};

console.log(bar, component);
"
`;

exports[`extract relative-path: css code 1`] = `
"body {
  color: red;
}

.bar {
  color: red;
}

body {
  color: #f00;
  background: #f00;
}

#sidebar {
  width: 30%;
  background-color: #faa; }

#header {
  color: #6c94be;
}

.pcss {
  color: red;
}

/*# sourceMappingURL=extracted.css.map */"
`;

exports[`extract relative-path: css map 1`] = `"{\\"version\\":3,\\"sources\\":[\\"foo.css\\",\\"bar.css\\",\\"test/fixtures/simple/style.styl\\",\\"style.styl\\",\\"test/fixtures/simple/style.sass\\",\\"test/fixtures/simple/style.less\\",\\"style.less\\",\\"style.pcss\\"],\\"names\\":[],\\"mappings\\":\\"AAAA;EACE,UAAU;AACZ;;ACFA;EACE,UAAU;AACZ;;ACFA;EACE,WAAO;EACP,gBAAY;ACCd;;ACHA;EACE,UAAU;EACV,sBAAsB,EAAA;;ACCxB;EACE,cAAA;ACFF;;ACFA;EACE,UAAU;AACZ\\",\\"file\\":\\"this/is/extracted.css\\",\\"sourcesContent\\":[\\"body {\\\\n  color: red;\\\\n}\\\\n\\",\\".bar {\\\\n  color: red;\\\\n}\\\\n\\",\\"body\\\\n  color: red\\\\n  background: @color\\\\n\\",\\"body {\\\\n  color: #f00;\\\\n  background: #f00;\\\\n}\\\\n\\",\\"#sidebar {\\\\n  width: 30%;\\\\n  background-color: #faa; }\\\\n\\",\\"@nice-blue: #5B83AD;\\\\n@light-blue: @nice-blue + #111;\\\\n\\\\n#header {\\\\n  color: @light-blue;\\\\n}\\\\n\\",\\"#header {\\\\n  color: #6c94be;\\\\n}\\\\n\\",\\".pcss {\\\\n  color: red;\\\\n}\\\\n\\"]}"`;

exports[`extract relative-path: js code 1`] = `
"'use strict';

var foo = undefined;

var bar = undefined;

console.log(foo, bar);
"
`;

exports[`extract sourcemap-inline: css code 1`] = `
"body {
  color: red;
}

.bar {
  color: red;
}

body {
  color: #f00;
  background: #f00;
}

#sidebar {
  width: 30%;
  background-color: #faa; }

#header {
  color: #6c94be;
}

.pcss {
  color: red;
}

/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbImZvby5jc3MiLCJiYXIuY3NzIiwidGVzdC9maXh0dXJlcy9zaW1wbGUvc3R5bGUuc3R5bCIsInN0eWxlLnN0eWwiLCJ0ZXN0L2ZpeHR1cmVzL3NpbXBsZS9zdHlsZS5zYXNzIiwidGVzdC9maXh0dXJlcy9zaW1wbGUvc3R5bGUubGVzcyIsInN0eWxlLmxlc3MiLCJzdHlsZS5wY3NzIl0sIm5hbWVzIjpbXSwibWFwcGluZ3MiOiJBQUFBO0VBQ0UsVUFBVTtBQUNaOztBQ0ZBO0VBQ0UsVUFBVTtBQUNaOztBQ0ZBO0VBQ0UsV0FBTztFQUNQLGdCQUFZO0FDQ2Q7O0FDSEE7RUFDRSxVQUFVO0VBQ1Ysc0JBQXNCLEVBQUE7O0FDQ3hCO0VBQ0UsY0FBQTtBQ0ZGOztBQ0ZBO0VBQ0UsVUFBVTtBQUNaIiwiZmlsZSI6ImJ1bmRsZS5jc3MiLCJzb3VyY2VzQ29udGVudCI6WyJib2R5IHtcbiAgY29sb3I6IHJlZDtcbn1cbiIsIi5iYXIge1xuICBjb2xvcjogcmVkO1xufVxuIiwiYm9keVxuICBjb2xvcjogcmVkXG4gIGJhY2tncm91bmQ6IEBjb2xvclxuIiwiYm9keSB7XG4gIGNvbG9yOiAjZjAwO1xuICBiYWNrZ3JvdW5kOiAjZjAwO1xufVxuIiwiI3NpZGViYXIge1xuICB3aWR0aDogMzAlO1xuICBiYWNrZ3JvdW5kLWNvbG9yOiAjZmFhOyB9XG4iLCJAbmljZS1ibHVlOiAjNUI4M0FEO1xuQGxpZ2h0LWJsdWU6IEBuaWNlLWJsdWUgKyAjMTExO1xuXG4jaGVhZGVyIHtcbiAgY29sb3I6IEBsaWdodC1ibHVlO1xufVxuIiwiI2hlYWRlciB7XG4gIGNvbG9yOiAjNmM5NGJlO1xufVxuIiwiLnBjc3Mge1xuICBjb2xvcjogcmVkO1xufVxuIl19*/"
`;

exports[`extract sourcemap-inline: js code 1`] = `
"'use strict';

var foo = undefined;

var bar = undefined;

console.log(foo, bar);
"
`;

exports[`extract sourcemap-true: css code 1`] = `
"body {
  color: red;
}

.bar {
  color: red;
}

body {
  color: #f00;
  background: #f00;
}

#sidebar {
  width: 30%;
  background-color: #faa; }

#header {
  color: #6c94be;
}

.pcss {
  color: red;
}

/*# sourceMappingURL=bundle.css.map */"
`;

exports[`extract sourcemap-true: css map 1`] = `"{\\"version\\":3,\\"sources\\":[\\"foo.css\\",\\"bar.css\\",\\"test/fixtures/simple/style.styl\\",\\"style.styl\\",\\"test/fixtures/simple/style.sass\\",\\"test/fixtures/simple/style.less\\",\\"style.less\\",\\"style.pcss\\"],\\"names\\":[],\\"mappings\\":\\"AAAA;EACE,UAAU;AACZ;;ACFA;EACE,UAAU;AACZ;;ACFA;EACE,WAAO;EACP,gBAAY;ACCd;;ACHA;EACE,UAAU;EACV,sBAAsB,EAAA;;ACCxB;EACE,cAAA;ACFF;;ACFA;EACE,UAAU;AACZ\\",\\"file\\":\\"bundle.css\\",\\"sourcesContent\\":[\\"body {\\\\n  color: red;\\\\n}\\\\n\\",\\".bar {\\\\n  color: red;\\\\n}\\\\n\\",\\"body\\\\n  color: red\\\\n  background: @color\\\\n\\",\\"body {\\\\n  color: #f00;\\\\n  background: #f00;\\\\n}\\\\n\\",\\"#sidebar {\\\\n  width: 30%;\\\\n  background-color: #faa; }\\\\n\\",\\"@nice-blue: #5B83AD;\\\\n@light-blue: @nice-blue + #111;\\\\n\\\\n#header {\\\\n  color: @light-blue;\\\\n}\\\\n\\",\\"#header {\\\\n  color: #6c94be;\\\\n}\\\\n\\",\\".pcss {\\\\n  color: red;\\\\n}\\\\n\\"]}"`;

exports[`extract sourcemap-true: js code 1`] = `
"'use strict';

var foo = undefined;

var bar = undefined;

console.log(foo, bar);
"
`;

exports[`extract true: css code 1`] = `
"body {
  color: red;
}

.bar {
  color: red;
}

body {
  color: #f00;
  background: #f00;
}

#sidebar {
  width: 30%;
  background-color: #faa; }

#header {
  color: #6c94be;
}

.pcss {
  color: red;
}
"
`;

exports[`extract true: js code 1`] = `
"'use strict';

var foo = undefined;

var bar = undefined;

console.log(foo, bar);
"
`;

exports[`inject false: js code 1`] = `
"'use strict';

var css_248z = \\"body {\\\\n  color: red;\\\\n}\\\\n\\";

var css_248z$1 = \\".bar {\\\\n  color: red;\\\\n}\\\\n\\";

console.log(css_248z, css_248z$1);
"
`;

exports[`inject function: js code 1`] = `
"'use strict';

var css_248z = \\"body {\\\\n  color: red;\\\\n}\\\\n\\";
console.log(css_248z);

var css_248z$1 = \\".bar {\\\\n  color: red;\\\\n}\\\\n\\";
console.log(css_248z$1);

var css_248z$2 = \\"body {\\\\n  color: #f00;\\\\n  background: #f00;\\\\n}\\\\n\\";
console.log(css_248z$2);

var css_248z$3 = \\"#sidebar {\\\\n  width: 30%;\\\\n  background-color: #faa; }\\\\n\\";
console.log(css_248z$3);

var css_248z$4 = \\"#header {\\\\n  color: #6c94be;\\\\n}\\\\n\\";
console.log(css_248z$4);

var css_248z$5 = \\".pcss {\\\\n  color: red;\\\\n}\\\\n\\";
console.log(css_248z$5);

console.log(css_248z, css_248z$1);
"
`;

exports[`inject top: js code 1`] = `
"'use strict';

function styleInject(css, ref) {
  if ( ref === void 0 ) ref = {};
  var insertAt = ref.insertAt;

  if (!css || typeof document === 'undefined') { return; }

  var head = document.head || document.getElementsByTagName('head')[0];
  var style = document.createElement('style');
  style.type = 'text/css';

  if (insertAt === 'top') {
    if (head.firstChild) {
      head.insertBefore(style, head.firstChild);
    } else {
      head.appendChild(style);
    }
  } else {
    head.appendChild(style);
  }

  if (style.styleSheet) {
    style.styleSheet.cssText = css;
  } else {
    style.appendChild(document.createTextNode(css));
  }
}

var css_248z = \\"body {\\\\n  color: red;\\\\n}\\\\n\\";
styleInject(css_248z,{\\"insertAt\\":\\"top\\"});

var css_248z$1 = \\".bar {\\\\n  color: red;\\\\n}\\\\n\\";
styleInject(css_248z$1,{\\"insertAt\\":\\"top\\"});

var css_248z$2 = \\"body {\\\\n  color: #f00;\\\\n  background: #f00;\\\\n}\\\\n\\";
styleInject(css_248z$2,{\\"insertAt\\":\\"top\\"});

var css_248z$3 = \\"#sidebar {\\\\n  width: 30%;\\\\n  background-color: #faa; }\\\\n\\";
styleInject(css_248z$3,{\\"insertAt\\":\\"top\\"});

var css_248z$4 = \\"#header {\\\\n  color: #6c94be;\\\\n}\\\\n\\";
styleInject(css_248z$4,{\\"insertAt\\":\\"top\\"});

var css_248z$5 = \\".pcss {\\\\n  color: red;\\\\n}\\\\n\\";
styleInject(css_248z$5,{\\"insertAt\\":\\"top\\"});

console.log(css_248z, css_248z$1);
"
`;

exports[`minimize extract: css code 1`] = `".bar,body{color:red}body{background:red}#sidebar{width:30%;background-color:#faa}#header{color:#6c94be}.pcss{color:red}"`;

exports[`minimize extract: js code 1`] = `
"'use strict';

var foo = undefined;

var bar = undefined;

console.log(foo, bar);
"
`;

exports[`minimize extract-sourcemap-inline: css code 1`] = `
".bar,body{color:red}body{background:red}#sidebar{width:30%;background-color:#faa}#header{color:#6c94be}.pcss{color:red}
/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbInRlc3QvZml4dHVyZXMvc2ltcGxlL3N0eWxlLnN0eWwiLCJiYXIuY3NzIiwic3R5bGUuc3R5bCIsInRlc3QvZml4dHVyZXMvc2ltcGxlL3N0eWxlLnNhc3MiLCJ0ZXN0L2ZpeHR1cmVzL3NpbXBsZS9zdHlsZS5sZXNzIiwic3R5bGUubGVzcyIsInN0eWxlLnBjc3MiXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IkFBQUEsVUNDRSxTQ0VGLENGSEEsS0FFRSxjRUNGLENDSEEsU0FDRSxTQUFVLENBQ1YscUJBQXNCLENDQ3hCLFFBQ0UsYUNGRixDQ0ZBLE1BQ0UsU0FDRiIsImZpbGUiOiJidW5kbGUuY3NzIiwic291cmNlc0NvbnRlbnQiOlsiYm9keVxuICBjb2xvcjogcmVkXG4gIGJhY2tncm91bmQ6IEBjb2xvclxuIiwiLmJhciB7XG4gIGNvbG9yOiByZWQ7XG59XG4iLCJib2R5IHtcbiAgY29sb3I6ICNmMDA7XG4gIGJhY2tncm91bmQ6ICNmMDA7XG59XG4iLCIjc2lkZWJhciB7XG4gIHdpZHRoOiAzMCU7XG4gIGJhY2tncm91bmQtY29sb3I6ICNmYWE7IH1cbiIsIkBuaWNlLWJsdWU6ICM1QjgzQUQ7XG5AbGlnaHQtYmx1ZTogQG5pY2UtYmx1ZSArICMxMTE7XG5cbiNoZWFkZXIge1xuICBjb2xvcjogQGxpZ2h0LWJsdWU7XG59XG4iLCIjaGVhZGVyIHtcbiAgY29sb3I6ICM2Yzk0YmU7XG59XG4iLCIucGNzcyB7XG4gIGNvbG9yOiByZWQ7XG59XG4iXX0= */"
`;

exports[`minimize extract-sourcemap-inline: js code 1`] = `
"'use strict';

var foo = undefined;

var bar = undefined;

console.log(foo, bar);
"
`;

exports[`minimize extract-sourcemap-true: css code 1`] = `
".bar,body{color:red}body{background:red}#sidebar{width:30%;background-color:#faa}#header{color:#6c94be}.pcss{color:red}
/*# sourceMappingURL=bundle.css.map */"
`;

exports[`minimize extract-sourcemap-true: css map 1`] = `"{\\"version\\":3,\\"sources\\":[\\"test/fixtures/simple/style.styl\\",\\"bar.css\\",\\"style.styl\\",\\"test/fixtures/simple/style.sass\\",\\"test/fixtures/simple/style.less\\",\\"style.less\\",\\"style.pcss\\"],\\"names\\":[],\\"mappings\\":\\"AAAA,UCCE,SCEF,CFHA,KAEE,cECF,CCHA,SACE,SAAU,CACV,qBAAsB,CCCxB,QACE,aCFF,CCFA,MACE,SACF\\",\\"file\\":\\"bundle.css\\",\\"sourcesContent\\":[\\"body\\\\n  color: red\\\\n  background: @color\\\\n\\",\\".bar {\\\\n  color: red;\\\\n}\\\\n\\",\\"body {\\\\n  color: #f00;\\\\n  background: #f00;\\\\n}\\\\n\\",\\"#sidebar {\\\\n  width: 30%;\\\\n  background-color: #faa; }\\\\n\\",\\"@nice-blue: #5B83AD;\\\\n@light-blue: @nice-blue + #111;\\\\n\\\\n#header {\\\\n  color: @light-blue;\\\\n}\\\\n\\",\\"#header {\\\\n  color: #6c94be;\\\\n}\\\\n\\",\\".pcss {\\\\n  color: red;\\\\n}\\\\n\\"]}"`;

exports[`minimize extract-sourcemap-true: js code 1`] = `
"'use strict';

var foo = undefined;

var bar = undefined;

console.log(foo, bar);
"
`;

exports[`minimize inject: js code 1`] = `
"'use strict';

function styleInject(css, ref) {
  if ( ref === void 0 ) ref = {};
  var insertAt = ref.insertAt;

  if (!css || typeof document === 'undefined') { return; }

  var head = document.head || document.getElementsByTagName('head')[0];
  var style = document.createElement('style');
  style.type = 'text/css';

  if (insertAt === 'top') {
    if (head.firstChild) {
      head.insertBefore(style, head.firstChild);
    } else {
      head.appendChild(style);
    }
  } else {
    head.appendChild(style);
  }

  if (style.styleSheet) {
    style.styleSheet.cssText = css;
  } else {
    style.appendChild(document.createTextNode(css));
  }
}

var css_248z = \\"body{color:red}\\";
styleInject(css_248z);

var css_248z$1 = \\".bar{color:red}\\";
styleInject(css_248z$1);

var css_248z$2 = \\"body{color:red;background:red}\\";
styleInject(css_248z$2);

var css_248z$3 = \\"#sidebar{width:30%;background-color:#faa}\\";
styleInject(css_248z$3);

var css_248z$4 = \\"#header{color:#6c94be}\\";
styleInject(css_248z$4);

var css_248z$5 = \\".pcss{color:red}\\";
styleInject(css_248z$5);

console.log(css_248z, css_248z$1);
"
`;

exports[`modules auto-modules: js code 1`] = `
"'use strict';

function styleInject(css, ref) {
  if ( ref === void 0 ) ref = {};
  var insertAt = ref.insertAt;

  if (!css || typeof document === 'undefined') { return; }

  var head = document.head || document.getElementsByTagName('head')[0];
  var style = document.createElement('style');
  style.type = 'text/css';

  if (insertAt === 'top') {
    if (head.firstChild) {
      head.insertBefore(style, head.firstChild);
    } else {
      head.appendChild(style);
    }
  } else {
    head.appendChild(style);
  }

  if (style.styleSheet) {
    style.styleSheet.cssText = css;
  } else {
    style.appendChild(document.createTextNode(css));
  }
}

var css_248z = \\".a-module_foo {\\\\n  color: red;\\\\n}\\\\n\\";
var a = {\\"foo\\":\\"a-module_foo\\"};
styleInject(css_248z);

var css_248z$1 = \\".b-module_b {\\\\n  color: red; }\\\\n\\";
var b = {\\"b\\":\\"b-module_b\\"};
styleInject(css_248z$1);

var css_248z$2 = \\".c-module_c {\\\\n  color: red;\\\\n}\\\\n\\";
var c = {\\"c\\":\\"c-module_c\\"};
styleInject(css_248z$2);

console.log(
  a,
  b,
  c
);
"
`;

exports[`modules extract: css code 1`] = `
".style_foo {
  color: red;
}
"
`;

exports[`modules extract: js code 1`] = `
"'use strict';

var style = {\\"foo\\":\\"style_foo\\"};

console.log(style.foo);
"
`;

exports[`modules inject: js code 1`] = `
"'use strict';

function styleInject(css, ref) {
  if ( ref === void 0 ) ref = {};
  var insertAt = ref.insertAt;

  if (!css || typeof document === 'undefined') { return; }

  var head = document.head || document.getElementsByTagName('head')[0];
  var style = document.createElement('style');
  style.type = 'text/css';

  if (insertAt === 'top') {
    if (head.firstChild) {
      head.insertBefore(style, head.firstChild);
    } else {
      head.appendChild(style);
    }
  } else {
    head.appendChild(style);
  }

  if (style.styleSheet) {
    style.styleSheet.cssText = css;
  } else {
    style.appendChild(document.createTextNode(css));
  }
}

var css_248z = \\".style_foo {\\\\n  color: red;\\\\n}\\\\n\\";
var style = {\\"foo\\":\\"style_foo\\"};
styleInject(css_248z);

console.log(style.foo);
"
`;

exports[`modules inject-object: js code 1`] = `
"'use strict';

function styleInject(css, ref) {
  if ( ref === void 0 ) ref = {};
  var insertAt = ref.insertAt;

  if (!css || typeof document === 'undefined') { return; }

  var head = document.head || document.getElementsByTagName('head')[0];
  var style = document.createElement('style');
  style.type = 'text/css';

  if (insertAt === 'top') {
    if (head.firstChild) {
      head.insertBefore(style, head.firstChild);
    } else {
      head.appendChild(style);
    }
  } else {
    head.appendChild(style);
  }

  if (style.styleSheet) {
    style.styleSheet.cssText = css;
  } else {
    style.appendChild(document.createTextNode(css));
  }
}

var css_248z = \\".style_foo {\\\\n  color: red;\\\\n}\\\\n\\";
var style = {\\"foo\\":\\"style_foo\\"};
styleInject(css_248z);

console.log(style.foo);
"
`;

exports[`modules named-exports: js code 1`] = `
"'use strict';

function styleInject(css, ref) {
  if ( ref === void 0 ) ref = {};
  var insertAt = ref.insertAt;

  if (!css || typeof document === 'undefined') { return; }

  var head = document.head || document.getElementsByTagName('head')[0];
  var style = document.createElement('style');
  style.type = 'text/css';

  if (insertAt === 'top') {
    if (head.firstChild) {
      head.insertBefore(style, head.firstChild);
    } else {
      head.appendChild(style);
    }
  } else {
    head.appendChild(style);
  }

  if (style.styleSheet) {
    style.styleSheet.cssText = css;
  } else {
    style.appendChild(document.createTextNode(css));
  }
}

var foo = \\"style_foo\\";
var _new = \\"style_new\\";
var _default = \\"style_default\\";
var css_248z = \\".style_foo {\\\\n  color: red;\\\\n}\\\\n\\\\n.style_new {\\\\n  color: blue;\\\\n}\\\\n\\\\n.style_default {\\\\n  color: green;\\\\n}\\\\n\\";
var style = {\\"foo\\":\\"style_foo\\",\\"new\\":\\"style_new\\",\\"default\\":\\"style_default\\",\\"_new\\":\\"style_new\\",\\"_default\\":\\"style_default\\"};
var stylesheet=\\".style_foo {\\\\n  color: red;\\\\n}\\\\n\\\\n.style_new {\\\\n  color: blue;\\\\n}\\\\n\\\\n.style_default {\\\\n  color: green;\\\\n}\\\\n\\";
styleInject(css_248z);

var style$1 = /*#__PURE__*/Object.freeze({
  __proto__: null,
  foo: foo,
  _new: _new,
  _default: _default,
  'default': style,
  stylesheet: stylesheet
});

console.log(style$1);
"
`;

exports[`modules named-exports-custom-class-name: js code 1`] = `
"'use strict';

function styleInject(css, ref) {
  if ( ref === void 0 ) ref = {};
  var insertAt = ref.insertAt;

  if (!css || typeof document === 'undefined') { return; }

  var head = document.head || document.getElementsByTagName('head')[0];
  var style = document.createElement('style');
  style.type = 'text/css';

  if (insertAt === 'top') {
    if (head.firstChild) {
      head.insertBefore(style, head.firstChild);
    } else {
      head.appendChild(style);
    }
  } else {
    head.appendChild(style);
  }

  if (style.styleSheet) {
    style.styleSheet.cssText = css;
  } else {
    style.appendChild(document.createTextNode(css));
  }
}

var foohacked = \\"style_foo\\";
var newhacked = \\"style_new\\";
var defaulthacked = \\"style_default\\";
var css_248z = \\".style_foo {\\\\n  color: red;\\\\n}\\\\n\\\\n.style_new {\\\\n  color: blue;\\\\n}\\\\n\\\\n.style_default {\\\\n  color: green;\\\\n}\\\\n\\";
var style = {\\"foo\\":\\"style_foo\\",\\"new\\":\\"style_new\\",\\"default\\":\\"style_default\\",\\"foohacked\\":\\"style_foo\\",\\"newhacked\\":\\"style_new\\",\\"defaulthacked\\":\\"style_default\\"};
var stylesheet=\\".style_foo {\\\\n  color: red;\\\\n}\\\\n\\\\n.style_new {\\\\n  color: blue;\\\\n}\\\\n\\\\n.style_default {\\\\n  color: green;\\\\n}\\\\n\\";
styleInject(css_248z);

var style$1 = /*#__PURE__*/Object.freeze({
  __proto__: null,
  foohacked: foohacked,
  newhacked: newhacked,
  defaulthacked: defaulthacked,
  'default': style,
  stylesheet: stylesheet
});

console.log(style$1);
"
`;

exports[`onExtract 1`] = `
"'use strict';

var foo = undefined;

var bar = undefined;

console.log(foo, bar);
"
`;

exports[`sass data-prepend: js code 1`] = `
"'use strict';

function styleInject(css, ref) {
  if ( ref === void 0 ) ref = {};
  var insertAt = ref.insertAt;

  if (!css || typeof document === 'undefined') { return; }

  var head = document.head || document.getElementsByTagName('head')[0];
  var style = document.createElement('style');
  style.type = 'text/css';

  if (insertAt === 'top') {
    if (head.firstChild) {
      head.insertBefore(style, head.firstChild);
    } else {
      head.appendChild(style);
    }
  } else {
    head.appendChild(style);
  }

  if (style.styleSheet) {
    style.styleSheet.cssText = css;
  } else {
    style.appendChild(document.createTextNode(css));
  }
}

var css_248z = \\".special {\\\\n  color: pink; }\\\\n\\";
styleInject(css_248z);
"
`;

exports[`sass data-prepend: js code 2`] = `
"'use strict';

function styleInject(css, ref) {
  if ( ref === void 0 ) ref = {};
  var insertAt = ref.insertAt;

  if (!css || typeof document === 'undefined') { return; }

  var head = document.head || document.getElementsByTagName('head')[0];
  var style = document.createElement('style');
  style.type = 'text/css';

  if (insertAt === 'top') {
    if (head.firstChild) {
      head.insertBefore(style, head.firstChild);
    } else {
      head.appendChild(style);
    }
  } else {
    head.appendChild(style);
  }

  if (style.styleSheet) {
    style.styleSheet.cssText = css;
  } else {
    style.appendChild(document.createTextNode(css));
  }
}

var css_248z = \\".special {\\\\n  color: pink; }\\\\n\\";
styleInject(css_248z);
"
`;

exports[`sass default: js code 1`] = `
"'use strict';

function styleInject(css, ref) {
  if ( ref === void 0 ) ref = {};
  var insertAt = ref.insertAt;

  if (!css || typeof document === 'undefined') { return; }

  var head = document.head || document.getElementsByTagName('head')[0];
  var style = document.createElement('style');
  style.type = 'text/css';

  if (insertAt === 'top') {
    if (head.firstChild) {
      head.insertBefore(style, head.firstChild);
    } else {
      head.appendChild(style);
    }
  } else {
    head.appendChild(style);
  }

  if (style.styleSheet) {
    style.styleSheet.cssText = css;
  } else {
    style.appendChild(document.createTextNode(css));
  }
}

var css_248z = \\"#sidebar {\\\\n  width: 30%;\\\\n  background-color: #faa; }\\\\n\\";
styleInject(css_248z);
"
`;

exports[`sass import: js code 1`] = `
"'use strict';

function styleInject(css, ref) {
  if ( ref === void 0 ) ref = {};
  var insertAt = ref.insertAt;

  if (!css || typeof document === 'undefined') { return; }

  var head = document.head || document.getElementsByTagName('head')[0];
  var style = document.createElement('style');
  style.type = 'text/css';

  if (insertAt === 'top') {
    if (head.firstChild) {
      head.insertBefore(style, head.firstChild);
    } else {
      head.appendChild(style);
    }
  } else {
    head.appendChild(style);
  }

  if (style.styleSheet) {
    style.styleSheet.cssText = css;
  } else {
    style.appendChild(document.createTextNode(css));
  }
}

var css_248z = \\".a {\\\\n  color: pink; }\\\\n\\\\n.b {\\\\n  color: red; }\\\\n\\\\n.c {\\\\n  color: black; }\\\\n\\\\n.foo {\\\\n  color: magenta; }\\\\n\\";
styleInject(css_248z);
"
`;

exports[`sass modules: js code 1`] = `
"'use strict';

function styleInject(css, ref) {
  if ( ref === void 0 ) ref = {};
  var insertAt = ref.insertAt;

  if (!css || typeof document === 'undefined') { return; }

  var head = document.head || document.getElementsByTagName('head')[0];
  var style = document.createElement('style');
  style.type = 'text/css';

  if (insertAt === 'top') {
    if (head.firstChild) {
      head.insertBefore(style, head.firstChild);
    } else {
      head.appendChild(style);
    }
  } else {
    head.appendChild(style);
  }

  if (style.styleSheet) {
    style.styleSheet.cssText = css;
  } else {
    style.appendChild(document.createTextNode(css));
  }
}

var css_248z = \\".style_foo {\\\\n  color: red; }\\\\n\\";
var style = {\\"foo\\":\\"style_foo\\"};
styleInject(css_248z);

console.log(style);
"
`;

exports[`sass sourcemap: js code 1`] = `
"'use strict';

function styleInject(css, ref) {
  if ( ref === void 0 ) ref = {};
  var insertAt = ref.insertAt;

  if (!css || typeof document === 'undefined') { return; }

  var head = document.head || document.getElementsByTagName('head')[0];
  var style = document.createElement('style');
  style.type = 'text/css';

  if (insertAt === 'top') {
    if (head.firstChild) {
      head.insertBefore(style, head.firstChild);
    } else {
      head.appendChild(style);
    }
  } else {
    head.appendChild(style);
  }

  if (style.styleSheet) {
    style.styleSheet.cssText = css;
  } else {
    style.appendChild(document.createTextNode(css));
  }
}

var css_248z = \\"#sidebar {\\\\n  width: 30%;\\\\n  background-color: #faa; }\\\\n\\\\n/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbInRlc3QvZml4dHVyZXMvc2Fzcy9mb28uc2FzcyJdLCJuYW1lcyI6W10sIm1hcHBpbmdzIjoiQUFBQTtFQUNFLFVBQVU7RUFDVixzQkFBc0IsRUFBQSIsImZpbGUiOiJmb28uc2FzcyIsInNvdXJjZXNDb250ZW50IjpbIiNzaWRlYmFyIHtcbiAgd2lkdGg6IDMwJTtcbiAgYmFja2dyb3VuZC1jb2xvcjogI2ZhYTsgfVxuIl19 */\\";
styleInject(css_248z);
"
`;

exports[`sourcemap inline: js code 1`] = `
"'use strict';

function styleInject(css, ref) {
  if ( ref === void 0 ) ref = {};
  var insertAt = ref.insertAt;

  if (!css || typeof document === 'undefined') { return; }

  var head = document.head || document.getElementsByTagName('head')[0];
  var style = document.createElement('style');
  style.type = 'text/css';

  if (insertAt === 'top') {
    if (head.firstChild) {
      head.insertBefore(style, head.firstChild);
    } else {
      head.appendChild(style);
    }
  } else {
    head.appendChild(style);
  }

  if (style.styleSheet) {
    style.styleSheet.cssText = css;
  } else {
    style.appendChild(document.createTextNode(css));
  }
}

var css_248z = \\"body {\\\\n  color: red;\\\\n}\\\\n\\\\n/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbImZvby5jc3MiXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IkFBQUE7RUFDRSxVQUFVO0FBQ1oiLCJmaWxlIjoiZm9vLmNzcyIsInNvdXJjZXNDb250ZW50IjpbImJvZHkge1xuICBjb2xvcjogcmVkO1xufVxuIl19 */\\";
styleInject(css_248z);

var css_248z$1 = \\".bar {\\\\n  color: red;\\\\n}\\\\n\\\\n/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbImJhci5jc3MiXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IkFBQUE7RUFDRSxVQUFVO0FBQ1oiLCJmaWxlIjoiYmFyLmNzcyIsInNvdXJjZXNDb250ZW50IjpbIi5iYXIge1xuICBjb2xvcjogcmVkO1xufVxuIl19 */\\";
styleInject(css_248z$1);

var css_248z$2 = \\"body {\\\\n  color: #f00;\\\\n  background: #f00;\\\\n}\\\\n\\\\n/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbInRlc3QvZml4dHVyZXMvc2ltcGxlL3N0eWxlLnN0eWwiLCJzdHlsZS5zdHlsIl0sIm5hbWVzIjpbXSwibWFwcGluZ3MiOiJBQUFBO0VBQ0UsV0FBTztFQUNQLGdCQUFZO0FDQ2QiLCJmaWxlIjoic3R5bGUuc3R5bCIsInNvdXJjZXNDb250ZW50IjpbImJvZHlcbiAgY29sb3I6IHJlZFxuICBiYWNrZ3JvdW5kOiBAY29sb3JcbiIsImJvZHkge1xuICBjb2xvcjogI2YwMDtcbiAgYmFja2dyb3VuZDogI2YwMDtcbn1cbiJdfQ== */\\";
styleInject(css_248z$2);

var css_248z$3 = \\"#sidebar {\\\\n  width: 30%;\\\\n  background-color: #faa; }\\\\n\\\\n/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbInRlc3QvZml4dHVyZXMvc2ltcGxlL3N0eWxlLnNhc3MiXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IkFBQUE7RUFDRSxVQUFVO0VBQ1Ysc0JBQXNCLEVBQUEiLCJmaWxlIjoic3R5bGUuc2FzcyIsInNvdXJjZXNDb250ZW50IjpbIiNzaWRlYmFyIHtcbiAgd2lkdGg6IDMwJTtcbiAgYmFja2dyb3VuZC1jb2xvcjogI2ZhYTsgfVxuIl19 */\\";
styleInject(css_248z$3);

var css_248z$4 = \\"#header {\\\\n  color: #6c94be;\\\\n}\\\\n\\\\n/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbInRlc3QvZml4dHVyZXMvc2ltcGxlL3N0eWxlLmxlc3MiLCJzdHlsZS5sZXNzIl0sIm5hbWVzIjpbXSwibWFwcGluZ3MiOiJBQUdBO0VBQ0UsY0FBQTtBQ0ZGIiwiZmlsZSI6InN0eWxlLmxlc3MiLCJzb3VyY2VzQ29udGVudCI6WyJAbmljZS1ibHVlOiAjNUI4M0FEO1xuQGxpZ2h0LWJsdWU6IEBuaWNlLWJsdWUgKyAjMTExO1xuXG4jaGVhZGVyIHtcbiAgY29sb3I6IEBsaWdodC1ibHVlO1xufVxuIiwiI2hlYWRlciB7XG4gIGNvbG9yOiAjNmM5NGJlO1xufVxuIl19 */\\";
styleInject(css_248z$4);

var css_248z$5 = \\".pcss {\\\\n  color: red;\\\\n}\\\\n\\\\n/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbInN0eWxlLnBjc3MiXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IkFBQUE7RUFDRSxVQUFVO0FBQ1oiLCJmaWxlIjoic3R5bGUucGNzcyIsInNvdXJjZXNDb250ZW50IjpbIi5wY3NzIHtcbiAgY29sb3I6IHJlZDtcbn1cbiJdfQ== */\\";
styleInject(css_248z$5);

console.log(css_248z, css_248z$1);
"
`;

exports[`sourcemap true: js code 1`] = `
"'use strict';

function styleInject(css, ref) {
  if ( ref === void 0 ) ref = {};
  var insertAt = ref.insertAt;

  if (!css || typeof document === 'undefined') { return; }

  var head = document.head || document.getElementsByTagName('head')[0];
  var style = document.createElement('style');
  style.type = 'text/css';

  if (insertAt === 'top') {
    if (head.firstChild) {
      head.insertBefore(style, head.firstChild);
    } else {
      head.appendChild(style);
    }
  } else {
    head.appendChild(style);
  }

  if (style.styleSheet) {
    style.styleSheet.cssText = css;
  } else {
    style.appendChild(document.createTextNode(css));
  }
}

var css_248z = \\"body {\\\\n  color: red;\\\\n}\\\\n\\\\n/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbImZvby5jc3MiXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IkFBQUE7RUFDRSxVQUFVO0FBQ1oiLCJmaWxlIjoiZm9vLmNzcyIsInNvdXJjZXNDb250ZW50IjpbImJvZHkge1xuICBjb2xvcjogcmVkO1xufVxuIl19 */\\";
styleInject(css_248z);

var css_248z$1 = \\".bar {\\\\n  color: red;\\\\n}\\\\n\\\\n/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbImJhci5jc3MiXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IkFBQUE7RUFDRSxVQUFVO0FBQ1oiLCJmaWxlIjoiYmFyLmNzcyIsInNvdXJjZXNDb250ZW50IjpbIi5iYXIge1xuICBjb2xvcjogcmVkO1xufVxuIl19 */\\";
styleInject(css_248z$1);

var css_248z$2 = \\"body {\\\\n  color: #f00;\\\\n  background: #f00;\\\\n}\\\\n\\\\n/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbInRlc3QvZml4dHVyZXMvc2ltcGxlL3N0eWxlLnN0eWwiLCJzdHlsZS5zdHlsIl0sIm5hbWVzIjpbXSwibWFwcGluZ3MiOiJBQUFBO0VBQ0UsV0FBTztFQUNQLGdCQUFZO0FDQ2QiLCJmaWxlIjoic3R5bGUuc3R5bCIsInNvdXJjZXNDb250ZW50IjpbImJvZHlcbiAgY29sb3I6IHJlZFxuICBiYWNrZ3JvdW5kOiBAY29sb3JcbiIsImJvZHkge1xuICBjb2xvcjogI2YwMDtcbiAgYmFja2dyb3VuZDogI2YwMDtcbn1cbiJdfQ== */\\";
styleInject(css_248z$2);

var css_248z$3 = \\"#sidebar {\\\\n  width: 30%;\\\\n  background-color: #faa; }\\\\n\\\\n/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbInRlc3QvZml4dHVyZXMvc2ltcGxlL3N0eWxlLnNhc3MiXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IkFBQUE7RUFDRSxVQUFVO0VBQ1Ysc0JBQXNCLEVBQUEiLCJmaWxlIjoic3R5bGUuc2FzcyIsInNvdXJjZXNDb250ZW50IjpbIiNzaWRlYmFyIHtcbiAgd2lkdGg6IDMwJTtcbiAgYmFja2dyb3VuZC1jb2xvcjogI2ZhYTsgfVxuIl19 */\\";
styleInject(css_248z$3);

var css_248z$4 = \\"#header {\\\\n  color: #6c94be;\\\\n}\\\\n\\\\n/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbInRlc3QvZml4dHVyZXMvc2ltcGxlL3N0eWxlLmxlc3MiLCJzdHlsZS5sZXNzIl0sIm5hbWVzIjpbXSwibWFwcGluZ3MiOiJBQUdBO0VBQ0UsY0FBQTtBQ0ZGIiwiZmlsZSI6InN0eWxlLmxlc3MiLCJzb3VyY2VzQ29udGVudCI6WyJAbmljZS1ibHVlOiAjNUI4M0FEO1xuQGxpZ2h0LWJsdWU6IEBuaWNlLWJsdWUgKyAjMTExO1xuXG4jaGVhZGVyIHtcbiAgY29sb3I6IEBsaWdodC1ibHVlO1xufVxuIiwiI2hlYWRlciB7XG4gIGNvbG9yOiAjNmM5NGJlO1xufVxuIl19 */\\";
styleInject(css_248z$4);

var css_248z$5 = \\".pcss {\\\\n  color: red;\\\\n}\\\\n\\\\n/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbInN0eWxlLnBjc3MiXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IkFBQUE7RUFDRSxVQUFVO0FBQ1oiLCJmaWxlIjoic3R5bGUucGNzcyIsInNvdXJjZXNDb250ZW50IjpbIi5wY3NzIHtcbiAgY29sb3I6IHJlZDtcbn1cbiJdfQ== */\\";
styleInject(css_248z$5);

console.log(css_248z, css_248z$1);
"
`;
